--- a/project/res/xml/preferences_dev.xml
+++ b/project/res/xml/preferences_dev.xml
@@ -62,6 +62,11 @@
             android:summary="Fake a price change during checkout (e.g., 10.25 for a $10.25 price change)"
             android:title="Fake Hotel Price Change" />
 
+        <CheckBoxPreference
+            android:key="@string/preference_fake_invalid_google_wallet_line_item"
+            android:summary="Add a bunk line item to our google wallet hotel checkout to cause unknown wallet error."
+            android:title="Cause unknown wallet error" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Flights" >
