--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -122,6 +122,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:includeFontPadding="false"
+                                        android:singleLine="true"
                                         android:paddingLeft="4dp"
                                         android:paddingRight="8dp"
                                         android:textColor="#d3d7dc"
@@ -141,6 +142,7 @@
                                         android:id="@+id/user_rating_text"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:singleLine="true"
                                         android:includeFontPadding="false"
                                         android:paddingLeft="4dp"
                                         android:paddingRight="8dp"
