--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -172,4 +172,8 @@
     <color name="tablet_flight_trip_view_airport_text_color">#aaffffff</color>
     <color name="tablet_flight_details_primary_text_color">#4c4c4c</color>
 
+    <!-- Tablet Checkout -->
+    <color name="tablet_checkout_light">#E5E6E5</color>
+    <color name="tablet_checkout_dark">#464D51</color>
+
 </resources>
