--- a/project/res/layout/fragment_results_flight_map.xml
+++ b/project/res/layout/fragment_results_flight_map.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
-        android:id="@+id/map_image_view"
+    <View
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
