--- a/project/res/layout/row_filter_refinement.xml
+++ b/project/res/layout/row_filter_refinement.xml
@@ -6,6 +6,8 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="1"
+        android:layout_marginLeft="3dp"
+        android:paddingLeft="6dp"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:singleLine="true"
