--- a/project/res/layout/fragment_svg_map.xml
+++ b/project/res/layout/fragment_svg_map.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <ImageView
-        android:id="@+id/map_image_view"
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
