2405: Add doV2Search=true and preference to disable it

--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -89,6 +89,7 @@
     <string name="preference_push_notification_any_flight">preference_push_notification_any_flight</string>
     <string name="preference_force_fs_db_update">preference_force_fs_db_update</string>
     <string name="preference_push_notification_gcm_id">preference_push_notification_gcm_id</string>
+    <string name="preference_disable_domain_v2_hotel_search">preference_disable_domain_v2_hotel_search</string>
 
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
