--- a/project/res/layout/flight_card_tablet_add_tripbucket.xml
+++ b/project/res/layout/flight_card_tablet_add_tripbucket.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.FlightLegSummarySectionTablet xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/tablet_tripbucket_card_width"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/tablet_tripbucket_card_height"
     android:background="@drawable/bg_flight_tablet_trip_bucket" >
 
