--- a/project/res/layout/hotel_card_tablet_add_tripbucket.xml
+++ b/project/res/layout/hotel_card_tablet_add_tripbucket.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.HotelSummarySection xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/tablet_tripbucket_card_width"
-    android:layout_height="@dimen/tablet_tripbucket_card_height"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_flight_tablet_trip_bucket"
     app:priceTextColor="?attr/hotelPriceStandardColor"
     app:salePriceTextColor="?attr/hotelPriceSaleColor" >
@@ -12,13 +12,13 @@
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/hotel_background_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/tablet_tripbucket_card_height"
         android:scaleType="fitCenter" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@id/hotel_background_view"
         android:layout_marginBottom="18dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
