--- a/project/res/layout/fragment_tablet_results_trip.xml
+++ b/project/res/layout/fragment_tablet_results_trip.xml
@@ -20,15 +20,14 @@
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/trip_bucket_flight_trip"
-        android:layout_width="@dimen/tablet_tripbucket_card_width"
-        android:layout_height="match_parent"
-        android:paddingLeft="25dp" >
+        android:layout_width="0dp"
+        android:layout_height="match_parent" >
 
         <com.expedia.bookings.widget.SwipeOutLayout
             android:id="@+id/trip_bucket_flight_trip_swipeout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
+            android:paddingRight="@dimen/trip_bucket_swipe_out_distance_half"
             app:swipeOutContentId="@+id/flight_trip_content"
             app:swipeOutDirection="west"
             app:swipeOutIndicatorId="@+id/flight_swipe_out_indicator_image" >
@@ -41,7 +40,7 @@
 
             <ImageView
                 android:id="@id/flight_swipe_out_indicator_image"
-                android:layout_width="33dp"
+                android:layout_width="@dimen/trip_bucket_swipe_out_distance"
                 android:layout_height="match_parent"
                 android:background="#66000000"
                 android:src="@drawable/ic_error_blue" />
@@ -50,15 +49,14 @@
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/trip_bucket_hotel_trip"
-        android:layout_width="@dimen/tablet_tripbucket_card_width"
-        android:layout_height="match_parent"
-        android:paddingLeft="25dp" >
+        android:layout_width="0dp"
+        android:layout_height="match_parent" >
 
         <com.expedia.bookings.widget.SwipeOutLayout
             android:id="@+id/trip_bucket_hotel_trip_swipeout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
+            android:paddingRight="@dimen/trip_bucket_swipe_out_distance_half"
             app:swipeOutContentId="@+id/hotel_trip_content"
             app:swipeOutDirection="west"
             app:swipeOutIndicatorId="@+id/hotel_swipe_out_indicator_image" >
@@ -71,7 +69,7 @@
 
             <ImageView
                 android:id="@id/hotel_swipe_out_indicator_image"
-                android:layout_width="33dp"
+                android:layout_width="@dimen/trip_bucket_swipe_out_distance"
                 android:layout_height="match_parent"
                 android:background="#66000000"
                 android:src="@drawable/ic_error_blue" />
