--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
-    android:layout_width="@dimen/tablet_tripbucket_card_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
     android:background="@android:color/transparent"
