--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -15,14 +15,7 @@
     <style name="V2.Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar" tools:targetApi="14" />
 
     <!-- Values that go into every *activity*.  Don't put anything here unless you want it in every *activity* -->
-    <style name="V2.Theme.Activity" />
-
-    <style name="V2.Theme.Activity.TabletLaunch" tools:targetApi="11">
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
-    </style>
-
-    <style name="V2.Theme.Activity.TabletResults" tools:targetApi="11">
+    <style name="V2.Theme.Activity">
         <item name="HotelRowThumbPlaceHolderDrawable">@drawable/ic_row_thumb_placeholder</item>
         <item name="hotelListingUserRatingStyle">@style/RatingBar.UserReview.White</item>
         <item name="hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale</item>
@@ -35,14 +28,22 @@
         <item name="hotelListingFilterPriceCheapString">@string/filter_price_cheap</item>
         <item name="hotelListingFilterPriceModerateString">@string/filter_price_moderate</item>
         <item name="hotelListingFilterPriceExpensiveString">@string/filter_price_expensive</item>
-        <item name="android:windowActionBarOverlay" tools:targetApi="11">true</item>
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/V2.Widget.ActionBar.TabletResults</item>
-        <item name="android:windowContentOverlay">@null</item>
         <item name="hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
         <item name="hotelImagePlaceHolderDrawable">@drawable/placeholder_lg</item>
     </style>
 
-    <style name="V2.Theme.Activity.TabletCheckout" parent="@android:style/Theme.Holo.Light" tools:targetApi="14">
+    <style name="V2.Theme.Activity.TabletLaunch" tools:targetApi="11">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
+    </style>
+
+    <style name="V2.Theme.Activity.TabletResults" tools:targetApi="11">
+        <item name="android:windowActionBarOverlay" tools:targetApi="11">true</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/V2.Widget.ActionBar.TabletResults</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="V2.Theme.Activity.TabletCheckout" tools:targetApi="14">
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletCheckout</item>
     </style>
