2444 CheckBox and its text padding problem
API 17 changed the behavior of the padding* attributes in CheckBox
to refer to padding relative to the TextView. This means I can
successfully set a padding between the CheckBox and its text
via paddingLeft attribute. For API < 17, we need a little bit more
padding (e.g. the width the CheckBox drawable + text padding).

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -12,7 +12,7 @@
     <dimen name="tablet_result_row_price_size">21sp</dimen>
 
     <!-- Tablet results -->
-
+    <dimen name="checkbox_filter_widget_padding_left">38dp</dimen>
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
