--- a/project/res/layout/row_filter_refinement.xml
+++ b/project/res/layout/row_filter_refinement.xml
@@ -7,7 +7,7 @@
         android:layout_height="48dp"
         android:layout_weight="1"
         android:layout_marginLeft="3dp"
-        android:paddingLeft="6dp"
+        android:paddingLeft="@dimen/checkbox_filter_widget_padding_left"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:singleLine="true"
