2441 stops filter hide filter sometimes
If there are only flights in the results set that have the same number of
stops, e.g. all the flights are non stop so there's no need in having a
stops filter on the screen.

--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -59,6 +59,7 @@
                 </com.expedia.bookings.widget.SlidingRadioGroup>
 
                 <com.expedia.bookings.widget.TextView
+                        android:id="@+id/stops_header"
                         style="@style/V2.Widget.TextView.FilterHeader"
                         android:layout_marginBottom="8dp"
                         android:text="@string/stops" />
